# url-shortener-rust

./: .gitignore  Cargo.toml  README.md  Rocket.toml  database.sql  database.sqlite
src/: main.rs  models.rs  routes.rs  schema.rs
