[package]
name = "url_shortener"
version = "0.1.0"
authors = ["Dung Nguyen <contact@dungnt.net>"]

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["json", "diesel_sqlite_pool"] }

# A generic serialization/deserialization framework
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

# A safe, extensible ORM and Query builder
diesel = { version = "1.4.8", features = ["sqlite"] }

# Bundled SQLite
libsqlite3-sys = { version = "0.22.2", features = ["bundled"], optional = true }
